# Davide

./: TEST_COVERAGE_ANALYSIS.md  app.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
