[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "davide"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "-v",
]
markers = [
    "integration: marks tests that require external services (deselect with '-m not integration')",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
branch = true          # measure branch coverage, not just line coverage
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80        # fail the build if coverage drops below 80%
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
